@@ -3,9 +3,10 @@ autokey-gtk (0.61.0-0~jaunty) jaunty; urgency=low
   * Add mouse click recording and playback capabilities
   * Rework record functionality to work as a full macro facility
   * Add ability to view tracebacks from script errors in GUI
-  * Change sample scripts so they work on GTK and KDE versions
+  * Change sample scripts so they work on both GTK and KDE versions
   * Handle scenario where xlib record module is not available
   * Don't undo last expansion if the mouse has been clicked
+  * Improvements to AT-SPI interface - now gives the real window title
 
  -- Chris Dekter <cdekter@gmail.com>  Mon, 26 Oct 2009 10:38:05 +1000
 
